fix(ecs): update z-index for uibModal (#8502)
* fix(ecs): update z-index for uibModal

* Rename windowClass

* Update windowsClass to be modal-z-index

--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -641,6 +641,11 @@ body > .container {
   }
 }
 
+/* This class is used to override the uibModal default z-index value of 1050 */
+.modal-z-index {
+  z-index: var(--layer-critical) !important;
+}
+
 .modal-pages {
   width: 1200px;
   .modal-page {
